--- a/client/src/app/forgot-password/forgot-password.page.html
+++ b/client/src/app/forgot-password/forgot-password.page.html
@@ -1,35 +1,36 @@
 <ion-header class="bg_transparent">
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
-        </ion-buttons>
-        <ion-title>
-            {{'forgot_password' | translate}}
-        </ion-title>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
+    </ion-buttons>
+    <ion-title>
+      {{'forgot_password' | translate}}
+    </ion-title>
+  </ion-toolbar>
 </ion-header>
 
 
 <ion-content class="bg_color" fullscreen>
-    <div class="banner">
-        <div class="banner_img center_img">
-            <img src="assets/images/banner_img.png" class="crop_img">
-        </div>
-        <div class="text_box animate__animated animate__fadeInUp">
-            <h2 class="">{{'it_will_take_less_then_a_minutes' | translate}}.</h2>
-            <p class="">{{'forgot_password_text' | translate}}</p>
-        </div>
+  <div class="banner">
+    <div class="banner_img center_img">
+      <img src="assets/images/banner_img.png" class="crop_img">
     </div>
-
-    <div class="form">
-        <ion-list lines="none">
-            <ion-item lines="none" class="animate__animated animate__fadeInUp">
-                <ion-label mode="md" position="floating">{{"enter_your_register_email_address" | translate}}</ion-label>
-                <ion-input mode="md" type="email"></ion-input>
-            </ion-item>
-        </ion-list>
-
-        <ion-button size="large" expand="round" class="btn animate__animated animate__fadeInUp" (click)="tabs()">{{'submit' | translate}}</ion-button>
-
+    <div class="text_box animate__animated animate__fadeInUp">
+      <h2 class="">{{'it_will_take_less_then_a_minutes' | translate}}.</h2>
+      <p class="">{{'forgot_password_text' | translate}}</p>
     </div>
+  </div>
+
+  <div class="form">
+    <ion-list lines="none">
+      <ion-item lines="none" class="animate__animated animate__fadeInUp">
+        <ion-input labelPlacement="floating" [label]="'enter_your_register_email_address' | translate" mode="md"
+          type="email"></ion-input>
+      </ion-item>
+    </ion-list>
+
+    <ion-button size="large" expand="round" class="btn animate__animated animate__fadeInUp" (click)="tabs()">{{'submit'
+      | translate}}</ion-button>
+
+  </div>
 </ion-content>
