--- a/client/src/app/stretch-workouts/stretch-workouts.page.scss
+++ b/client/src/app/stretch-workouts/stretch-workouts.page.scss
@@ -126,7 +126,7 @@ ion-list {
                 min-width: 83px;
                 height: 83px;
                 border-radius: 7px;
-                margin-right: 20px;
+                // margin-right: 20px;
             }
 
             .text_box {
