--- a/client/src/app/account/account.page.html
+++ b/client/src/app/account/account.page.html
@@ -4,7 +4,7 @@
         <ion-buttons slot="start">
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
--->
+        -->
         <ion-title>{{'account' | translate}}</ion-title>
     </ion-toolbar>
 </ion-header>
@@ -14,24 +14,37 @@
 
     <div class="buy_this_app end" (click)="buyappalert()" *ngIf="config.demoMode">
         <h2>
-            <!--                                    <ion-icon class="zmdi zmdi-shopping-cart"></ion-icon>-->
+            <!-- <ion-icon class="zmdi zmdi-shopping-cart"></ion-icon>-->
             {{"buy_this_app" | translate}}
         </h2>
     </div>
 
     <div class="bg_img center_img">
-        <img src="assets/images/profile.png" class="crop_img">
+        <!-- <img src="{{ user?.avatar }}" class="crop_img"> -->
     </div>
 
-    <div class="profile d-flex" (click)="my_profile()">
-        <div class="img_box center_img">
-            <img src="assets/images/profile.png" class="crop_img">
+    <div class="d-flex">
+        <div class="profile d-flex" (click)="my_profile()">
+            <div class="profile_img center_img">
+                <div class="img_box center_img ion-bo" [style.backgroundImage]="'url(' + (user?.avatar ) + ')'">
+                    @if (!user?.avatar) {
+                    <ion-icon class="zmdi zmdi-account"></ion-icon>
+                    }
+                </div>
+                <!-- <img src="{{ user?.avatar }}" class="crop_img"> -->
+            </div>
+            <div class="text_box ion-margin-start">
+                <h2>{{ user?.name || '-'}}</h2>
+                <h3>{{'view_profile' | translate}}</h3>
+            </div>
         </div>
-        <div class="text_box">
-            <h2>Samantha Smith</h2>
-            <h3>{{'view_profile' | translate}}</h3>
-        </div>
+
+
+        <ion-button fill="clear" (click)="openAccountSwitchOptions()">
+            <ion-icon name="ellipsis-vertical-circle-outline"></ion-icon>
+        </ion-button>
     </div>
+
     <div class="get_pro d-flex" (click)="get_pro()">
         <h2>Get Access to 1000+ Cources</h2>
         <h3 class="end">{{'get_pro' | translate}}</h3>
