--- a/client/src/app/account/account.page.scss
+++ b/client/src/app/account/account.page.scss
@@ -3,6 +3,7 @@ ion-header {
     top: 0;
     left: 0;
     width: 100%;
+
     ion-toolbar {
         &::before {
             content: '';
@@ -15,11 +16,13 @@ ion-header {
             backdrop-filter: saturate(83%) blur(8px);
             transition: all .3s;
         }
+
         ion-title {
             padding: 0 30px !important;
             text-align: center !important;
             font-size: 1.35rem !important;
         }
+
         &.show-background {
             &::before {
                 top: 0;
@@ -34,6 +37,7 @@ ion-header {
     left: 0;
     width: 100%;
     height: 320px;
+
     &::before,
     &::after {
         content: '';
@@ -45,6 +49,7 @@ ion-header {
         background: linear-gradient(0deg, rgba(27, 27, 32, 1) 0%, rgba(27, 27, 32, 1) 0%, rgba(27, 27, 32, 0.4102591720281863) 100%);
         z-index: 9;
     }
+
     &::before {
         background: var(--bg-color);
         opacity: .4;
@@ -61,15 +66,21 @@ ion-content {
     z-index: 99;
     padding: 20px;
     align-items: flex-start;
+
+    .profile_img {
+        overflow: visible;
+    }
+
     .img_box {
         min-width: 83px;
         height: 83px;
         border-radius: 7px;
-        margin-right: 20px;
     }
+
     .text_box {
         width: 100%;
         padding-top: 10px;
+
         h2 {
             margin: 0;
             color: var(--white);
@@ -77,6 +88,7 @@ ion-content {
             letter-spacing: 0.3px;
             padding-bottom: 8px;
         }
+
         h3 {
             margin: 0;
             color: var(--text-light);
@@ -90,6 +102,7 @@ ion-content {
     z-index: 99;
     padding: 11px 20px;
     background: var(--primary);
+
     h2 {
         margin: 0;
         color: var(--white);
@@ -97,6 +110,7 @@ ion-content {
         font-size: .95rem;
         letter-spacing: .4px;
     }
+
     h3 {
         margin-top: 0;
         margin-bottom: 0;
@@ -116,6 +130,7 @@ ion-list {
     margin: 0 auto;
     padding: 0;
     padding-top: 30px;
+
     ion-item {
         padding: 0;
         --inner-padding-end: 0px;
@@ -127,8 +142,10 @@ ion-list {
         --min-height: unset;
         margin: 0 auto;
         padding-bottom: 25px;
+
         .item-inner {
             align-items: flex-start !important;
+
             ion-icon {
                 width: auto;
                 color: var(--primary);
@@ -136,8 +153,10 @@ ion-list {
                 font-size: 1.13rem;
                 padding: 0 2px;
             }
+
             .text_box {
                 width: 100%;
+
                 h2 {
                     margin: 0;
                     color: var(--white);
@@ -145,6 +164,7 @@ ion-list {
                     letter-spacing: 0.3px;
                     padding-bottom: 8px;
                 }
+
                 h3 {
                     margin: 0;
                     color: var(--text-light);
@@ -152,50 +172,66 @@ ion-list {
                 }
             }
         }
+
         &.animate__animated.animate__fadeInUp {
             --animate-duration: .0s;
+
             &:nth-child(1) {
                 --animate-duration: .15s;
             }
+
             &:nth-child(2) {
                 --animate-duration: .2s;
             }
+
             &:nth-child(3) {
                 --animate-duration: .25s;
             }
+
             &:nth-child(4) {
                 --animate-duration: .3s;
             }
+
             &:nth-child(5) {
                 --animate-duration: .35s;
             }
+
             &:nth-child(6) {
                 --animate-duration: .4s;
             }
+
             &:nth-child(7) {
                 --animate-duration: .45s;
             }
+
             &:nth-child(8) {
                 --animate-duration: .5s;
             }
+
             &:nth-child(9) {
                 --animate-duration: .55s;
             }
+
             &:nth-child(10) {
                 --animate-duration: .6s;
             }
+
             &:nth-child(11) {
                 --animate-duration: .65s;
             }
+
             &:nth-child(12) {
                 --animate-duration: .7s;
             }
+
             &:nth-child(13) {
                 --animate-duration: .5s;
             }
+
             &:nth-child(14) {
                 --animate-duration: .5s;
             }
+
             &:nth-child(15) {
                 --animate-duration: .5s;
             }
@@ -216,6 +252,7 @@ ion-list {
     z-index: 9999;
     top: 42px;
     right: 0px;
+
     h2 {
         color: var(--white) !important;
         font-size: 1rem !important;
@@ -224,6 +261,7 @@ ion-list {
         display: flex;
         align-items: center;
         letter-spacing: 0 !important;
+
         ion-icon {
             font-size: 1rem;
             min-width: 23px;
@@ -233,6 +271,7 @@ ion-list {
 
 .developed_by {
     padding: 0px 20px 27px 20px;
+
     h2 {
         margin: 0;
         color: var(--text-light);
@@ -241,10 +280,18 @@ ion-list {
         min-width: 38%;
         letter-spacing: 0;
     }
+
     img {
         max-width: 160px;
+
         &.dark-theme-logo {
             display: none;
         }
     }
+}
+
+.button-clear {
+    color: white;
+    opacity: 80%;
+    --background-hover: unset;
 }
