--- a/client/src/app/get-pro/get-pro.page.scss
+++ b/client/src/app/get-pro/get-pro.page.scss
@@ -67,7 +67,7 @@ ion-list {
                 min-width: 83px;
                 height: 83px;
                 border-radius: 7px;
-                margin-right: 20px;
+                // margin-right: 20px;
             }
 
             ion-icon {
