--- a/client/src/app/verification/verification.page.html
+++ b/client/src/app/verification/verification.page.html
@@ -22,12 +22,13 @@
   <div class="form">
     <ion-list lines="none">
       <ion-item lines="none" class="animate__animated animate__fadeInUp">
-        <ion-input labelPlacement="floating" [label]="'enter_verification_code' | translate" mode="md"
+        <ion-input #input labelPlacement="floating" [label]="'enter_verification_code' | translate" mode="md"
           type="number"></ion-input>
       </ion-item>
     </ion-list>
 
-    <ion-button size="large" expand="round" class="btn animate__animated animate__fadeInUp" (click)="tabs()">{{'submit'
+    <ion-button size="large" expand="round" class="btn animate__animated animate__fadeInUp"
+      (click)="submit(input.value)">{{'submit'
       | translate}}</ion-button>
 
   </div>
