--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,11 +2,21 @@
 @import 'scss/global.scss';
 
 .header-md {
-  -webkit-box-shadow: none;
-  box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 
 // TODO: GV, ion-inputs have min-height in new version: leave?
 // .sc-ion-input-md-h {
 //   min-height: unset;
 // }
+
+.d-none {
+    display: none;
+}
+
+.img_box {
+    background-size: cover !important;
+    background-position-x: center !important;
+    background-position-y: center !important;
+}
