--- a/client/src/app/my-profile/my-profile.page.html
+++ b/client/src/app/my-profile/my-profile.page.html
@@ -36,7 +36,7 @@
 
 <ion-footer>
     <ion-toolbar>
-        <div class="button-group">
+        <div class="button-group ion-padding">
             @if (isEditing) {
             <ion-button class="btn" expand="block" color="light" (click)="cancelEditMode()">{{ 'cancel' | translate
                 }}</ion-button>
