--- a/client/src/app/rest/rest.page.html
+++ b/client/src/app/rest/rest.page.html
@@ -22,7 +22,11 @@
         <h3>{{'you_going_grate' | translate}} !!</h3>
     </div>
     <div class="timer">
-        <circle-progress [maxPercent]="100" [percent]="65" [showTitle]="false" [showUnits]="false" [showSubtitle]="false" [responsive]="true" [radius]="74" [outerStrokeWidth]="9" [space]="-6" [innerStrokeWidth]="4" [outerStrokeLinecap]="'round'" [outerStrokeColor]="'var(--primary)'" [innerStrokeColor]="'rgba(72, 72, 72, 0.83)'" [animation]="true" [animationDuration]="300"></circle-progress>
+        <circle-progress [maxPercent]="100" [percent]="65" [showTitle]="false" [showUnits]="false"
+            [showSubtitle]="false" [responsive]="true" [radius]="74" [outerStrokeWidth]="9" [space]="-6"
+            [innerStrokeWidth]="4" [outerStrokeLinecap]="'round'" [outerStrokeColor]="'var(--primary)'"
+            [innerStrokeColor]="'rgba(72, 72, 72, 0.83)'" [animation]="true"
+            [animationDuration]="300"></circle-progress>
         <div class="text_box">
             <h2>0:20</h2>
             <h3>{{'mins' | translate}}</h3>
