--- a/client/src/app/stretch-workouts/stretch-workouts.page.html
+++ b/client/src/app/stretch-workouts/stretch-workouts.page.html
@@ -9,7 +9,8 @@
             </ion-buttons>
             <ion-title>
                 <div class="title-inner">
-                    <h2 class="d-flex"> Strecho Workout <ion-icon class="zmdi zmdi-plus-circle-o-duplicate end ion-text-end"></ion-icon>
+                    <h2 class="d-flex"> Strecho Workout <ion-icon
+                            class="zmdi zmdi-plus-circle-o-duplicate end ion-text-end"></ion-icon>
                     </h2>
                     <h3>90 hours | Amenda Johnson </h3>
                 </div>
