--- a/client/src/app/home/home.page.html
+++ b/client/src/app/home/home.page.html
@@ -3,23 +3,103 @@
         <ion-title><img src="assets/images/logo.png"></ion-title>
     </ion-toolbar>
     <ion-segment mode="ios" [(ngModel)]="tab" lines="none">
-        <ion-segment-button mode="ios" value="trainer">
+        <ion-segment-button mode="ios" value="programs">
             <ion-label>
-                {{'trainer' | translate}}
+                {{'programs' | translate}}
             </ion-label>
         </ion-segment-button>
-        <ion-segment-button mode="ios" value="standard">
+        <ion-segment-button mode="ios" value="templates">
             <ion-label>
-                {{'standard' | translate}}
+                {{'templates' | translate}}
             </ion-label>
         </ion-segment-button>
     </ion-segment>
 </ion-header>
 
-<ion-content class="bg_color" fullscreen>
+<ion-content class="bg_color" fullscreen fixed-slot-placement="before">
     <div class="tab_content" [ngSwitch]="tab">
 
-        <ion-list lines="none" *ngSwitchCase="'trainer'">
+        <ion-list lines="none" *ngSwitchCase="'programs'">
+            @for (program of programs; track program.id) {
+            <ion-item-sliding>
+                <ion-item (click)="openDetailProgram(program.id)">
+                    <ion-label>
+                        <div>
+                            <h2>{{ program.name }}</h2>
+                            <span class="duration">
+                                <ion-icon name="time-outline" size="small"></ion-icon>
+                                {{ program.duration || 'N/A' }} {{ 'weeks' | translate }}
+                            </span>
+                        </div>
+                        <ion-note>{{ program.description || ('no_description' | translate) }}</ion-note>
+                        @if (program.tags?.length > 0) {
+                        <div class="tag-container">
+                            @for (tag of program.tags; track $index) {
+                            <ion-chip color="primary" size="small">{{ tag }}</ion-chip>
+                            }
+                        </div>
+                        }
+                    </ion-label>
+                </ion-item>
+
+                <ion-item-options side="start">
+                    <ion-item-option color="primary" (click)="presentAssignProgramPopover(program)">
+                        <ion-icon slot="icon-only" name="person-add"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+
+                <ion-item-options side="end">
+                    <ion-item-option color="danger" (click)="deleteProgram(program.id)">
+                        <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+            }
+        </ion-list>
+
+
+        <ion-list lines="none" *ngSwitchCase="'templates'">
+            @for (template of templates; track template.exercises.length) {
+            <ion-item-sliding>
+                <ion-item (click)="presentTemplateActionSheet(template)">
+                    <ion-label>
+                        <div>
+                            <h2> {{ template.name ?? ('template' | translate) }} ({{ template.exercises.length }})
+                            </h2>
+                            <ion-note>
+                                @for (exercise of template.exercises.slice(0, 3); track $index) {
+                                {{ exercise.name }}{{ !$last ? ', ' : '' }}
+                                } @empty {
+                                {{ 'blank_template' | translate }}
+                                }
+                            </ion-note>
+                        </div>
+                    </ion-label>
+                </ion-item>
+
+                <ion-item-options side="start">
+                    <ion-item-option color="primary" (click)="presentAssignTemplatePopover(template)">
+                        <ion-icon slot="icon-only" name="person-add"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+
+                <ion-item-options side="end">
+                    <ion-item-option color="danger" (click)="deleteTemplate(template.id)">
+                        <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+            }
+        </ion-list>
+
+        <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+            <ion-fab-button (click)="tab == 'programs' ? openNewProgram() : openNewTemplate()">
+                <ion-icon name="add"></ion-icon>
+            </ion-fab-button>
+        </ion-fab>
+
+        <ng-container>
+            <!-- <ion-list lines="none" *ngSwitchCase="'trainer'">
             <ion-item lines="none" class="animate__animated animate__fadeInUp" (click)="weight_programs()">
                 <div class="item-inner">
                     <div class="img_box center_img">
@@ -282,8 +362,6 @@
 
 
         </ion-list>
-
-
         <ion-list lines="none" *ngSwitchCase="'standard'">
             <ion-item lines="none" class="animate__animated animate__fadeInUp" (click)="chest_workouts()">
                 <div class="item-inner">
@@ -671,6 +749,7 @@
                     </div>
                 </div>
             </ion-item>
-        </ion-list>
+        </ion-list> -->
+        </ng-container>
     </div>
 </ion-content>
