--- a/client/src/scss/global.scss
+++ b/client/src/scss/global.scss
@@ -488,6 +488,7 @@ ion-segment {
         --indicator-color: var(--transparent) !important;
         --indicator-height: 0px !important;
         --ripple-color: var(--transparent) !important;
+        --color-checked: var(--ion-color-primary);
     }
 }
 
